# codingplan_benchmark

./: .gitignore  README.md  article.md  config.example.yaml  pyproject.toml  requirements.txt
llm_bench/: __init__.py  __main__.py  cli.py  config.py  report.py  runner.py  scorer.py
llm_bench/providers/: __init__.py  _async_backend.py  anthropic_compat.py  base.py  openai_compat.py  registry.py
llm_bench/tasks/: __init__.py  coding_plans.py
results/: benchmark_results.json  full_test_output.txt  thinking_test_output.txt
