[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-coding-plan-bench"
version = "0.1.0"
description = "云端 LLM Coding Plan 性能评测工具 - 检测量化掺水限速"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "tiktoken>=0.6.0",
    "tabulate>=0.9.0",
    "numpy>=1.26.0",
]

[project.scripts]
llm-bench = "llm_bench.__main__:cli"

[tool.setuptools.packages.find]
include = ["llm_bench*"]
